# Use-Engagement-Dashboard

./: .gitignore  README.md
backend/: pyproject.toml
backend/src/twin_dashboard_api/: __init__.py  database.py  main.py  models.py  schemas.py  seed.py
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: ConversationsChart.tsx  DailyActivityChart.tsx  KpiCards.tsx  QualityPanel.tsx  StickinessPanel.tsx  StructurePanel.tsx  TwinsTable.tsx
