[project]
name = "twin-dashboard-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.135.3",
    "sqlalchemy>=2.0.49",
    "uvicorn[standard]>=0.44.0",
]

[project.scripts]
twin-dashboard-seed = "twin_dashboard_api.seed:main"

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"
